2011-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/main.c:
	  Disabled forgotten debug message.

2011-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/Makefile.in,
	  src/SDCCralloc.hpp,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Added option to enable experimental support for A and HL.

2011-01-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp:
	  Added missing boost:: prefix.

2011-01-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* [*].vcxproj: added project files for Microsoft Visual C++ Express 2010

2011-01-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/sdld_all.dsp: renamed dldgb.exe to sdldgb.exe
	* src/avr/gen.c,
	* src/ds390/gen.c,
	* src/ds390/ralloc.c,
	* src/hc08/gen.c,
	* src/mcs51/gen.c,
	* src/pic14/gen.c,
	* src/pic14/ralloc.c,
	* src/pic16/gen.c,
	* src/pic16/genutils.c,
	* src/SDCCicode.c,
	* src/SDCCicode.h,
	* src/SDCClrange.c,
	* src/xa51/ralloc.c,
	* src/z80/gen.c,
	* src/z80/ralloc.c,
	* src/z80/ralloc2.cc: renamed union operand to union svt,
	  added OP_KEY and OP_TYPE, use OP_xxx macros more often

2011-01-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc:
	  Handle A in new register allocator.

2011-01-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80ralloc2.cc:
	  Reg name cleanup.

2011-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80ralloc2.cc:
	  Preparaton for use of a and hl in the new allocator.

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Fixed const-correctness of iterators.

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/ralloc2.cc:
	  Fixed confusion of std::map/std::multimap iterators.

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp