@@ -232,12 +232,13 @@ void add_vertices_to_tree_decomposition(T_t &T, const v_t v, const v_t v_end, G_
 	add_vertices_to_tree_decomposition(T, ++v_next, v_end, G, active);
 
 	// Add new bag
-	typename boost::graph_traits<T_t>::vertex_iterator t, s;
+	typename boost::graph_traits<T_t>::vertex_iterator t;
+	typename boost::graph_traits<T_t>::vertex_descriptor s;
 	t = find_bag(neighbours, T);
 	s = boost::add_vertex(T);
-	boost::add_edge(*t, *s, T);
-	T[*s].bag = neighbours;
-	T[*s].bag.insert(*v);
+	boost::add_edge(*t, s, T);
+	T[s].bag = neighbours;
+	T[s].bag.insert(*v);
 
 	//std::set<unsigned int>::iterator x;
 	//std::cout << "Added (";
