@@ -1,5 +1,10 @@
 2011-01-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCtree_dec.hpp:
+	  Fixed vertex iterator / descriptor problem that caused errors in MSVC++.
+
+2011-01-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCralloc.hpp,
 	  src/z80/main.c:
 	  Disabled forgotten debug message.
